@@ -1,3 +1,10 @@
+2008-08-09  Frank Ch. Eigler  <fche@elastic.org>
+
+	* Makefile.am (example index): Only warn and instruct on index
+	regeneration.  Do not actually perform it as the source tree
+	should be considered (and can really be) read-only.
+	* Makefile.in: Regenerated.
+
 2008-08-08  Dave Brolley  <brolley@redhat.com>
 
 	* stap-client: Use quotes when echoing. Exit with $rc.
